# client-cert-web-auth

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
app/: config.py  crypto_utils.py  handler.py  main.py
certs/: key.pem  server.pem
config/: config.example.yaml  config.yaml
nginx/: default.conf  docker-entrypoint.sh  entrypoint.sh  uds-ssl.conf
scripts/: generate_config.py
tests/: __init__.py  test_config.py  test_crypto_utils.py  test_handler.py
