[project]
name = "client-cert-auth"
version = "5.0.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42",
    "pyyaml>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-aiohttp>=1.1.1",
    "pyright>=1.1",
]
